fixing the appearance of start button on ie and edge

--- a/pageStyles/constants.scss
+++ b/pageStyles/constants.scss
@@ -16,7 +16,7 @@ $bodyFontSize: 20px;
 //Buttons
 @mixin techSwitchButton($backgroundColour: $techSwitchBlack, $inverseColour: $techSwitchYellow) {
     width: 180px;
-    height: 60px;
+    height: 1.3em;
     margin-top: 20px;
     padding: 3px;
     display: inline-block;
@@ -29,6 +29,7 @@ $bodyFontSize: 20px;
    text-decoration: none;
     transition: all 250ms ease;
     background: $backgroundColour;
+
 
     &:hover, &:active {
       background: $inverseColour;
